template/homepage/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  parentRefs:
  - name: gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames: ["change.me"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homepage
      port: 3000
